build.gradle modifications for jitpack

--- a/sdp-android/build.gradle
+++ b/sdp-android/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
-apply plugin: 'signing'
+apply plugin: 'com.github.dcendents.android-maven'
 
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
@@ -21,6 +21,8 @@ android {
         targetSdkVersion 23
     }
 }
+
+group='com.github.despectra'
 
 public class SDPFactory extends DefaultTask {
 
@@ -79,54 +81,4 @@ createSDP{
     unit = "dp"//change to "sp" if needed
     positiveMax = 600//change to 600 or any other value if needed
     negativeMax = 60//change to 600 or any other value if needed
-}
-
-signing {
-    required { gradle.taskGraph.hasTask("uploadArchives") }
-    sign configurations.archives
-}
-
-uploadArchives {
-    configuration = configurations.archives
-    repositories.mavenDeployer {
-        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-        repository(url: sonatypeRepo) {
-            authentication(userName: sonatypeUsername,
-                    password: sonatypePassword)
-        }
-
-        pom.groupId = 'com.intuit.sdp'
-        pom.artifactId = 'sdp-android'
-        pom.version = '1.0.3'
-
-        pom.project {
-            name 'sdp'
-            packaging 'aar'
-            description 'A scalable size unit for Andorid'
-            url 'https://github.com/intuit/sdp'
-
-            scm {
-                url 'https://github.com/intuit/sdp'
-                connection 'scm:git@github.com:intuit/sdp.git'
-                developerConnection 'scm:git@github.com:intuit/sdp.git'
-            }
-
-            licenses {
-                license {
-                    name 'The MIT License (MIT)'
-                    url 'https://github.com/intuit/sdp/blob/master/LICENSE'
-                    distribution 'repo'
-                }
-            }
-
-            developers {
-                developer {
-                    id developerID
-                    name developerName
-                    email developerEmail
-                }
-            }
-        }
-    }
 }
